# cmg-memory

./: .gitignore  README.md  chat.py  cli.py  pyproject.toml  run.py  test.py
cmg/: __init__.py  adapters.py  client.py  consolidation.py  crr.py  extractor.py  memory.py  retrieval.py  scorer.py  store.py  types.py  usage.py  write_gate.py
