[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmg-memory"
version = "0.1.0"
description = "Model-agnostic persistent memory for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Rishav Saha", email = "rishavsaha0907@gmail.com" }
]
keywords = ["llm", "memory", "ai", "openai", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai      = ["openai>=1.0.0"]
anthropic   = ["anthropic>=0.25.0"]
ollama      = ["ollama>=0.2.0"]
huggingface = ["huggingface_hub>=0.20.0", "transformers>=4.38.0"]
pinecone    = ["pinecone>=3.0.0"]
chromadb    = ["chromadb>=0.4.0"]
embeddings  = ["sentence-transformers>=2.5.0"]
api         = ["httpx>=0.27.0"]
all         = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "ollama>=0.2.0",
    "sentence-transformers>=2.5.0",
    "pinecone>=3.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage   = "https://github.com/Rishav0907/cmg-memory"
Repository = "https://github.com/Rishav0907/cmg-memory"

[project.scripts]
cmg = "cmg.cli:main"

[tool.setuptools.packages.find]
include = ["cmg*"]

[tool.setuptools.package-data]
cmg = ["py.typed"]